<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User">

    <Button
        android:id="@+id/view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile_button" />

    <Button
        android:id="@+id/jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobs_button" />

    <Button
        android:id="@+id/view_student_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_student_details_button" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_button" />
</LinearLayout>